# fastapi-uv-servive-template

./: .dockerignore  .env.default  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/python_service_template/: app.py  dependencies.py  settings.py
src/python_service_template/api/: health.py
src/python_service_template/api/v1/: coffee.py
src/python_service_template/domain/coffee/: entity.py  repository.py  service.py
src/python_service_template/infrastructure/: health.py
src/python_service_template/infrastructure/client/: coffee.py
tests/domain/coffee/: test_service.py
tests/infrastructure/: test_healthcheck.py
tests/infrastructure/client/: test_coffee.py
